--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     */ 
     var setting = {
         /* 在以下【双引号】中粘贴QQ钱包收款链接 */ 
-        qqUrl: "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&f=wallet&a=1&ac=029096F0B7B3C700F582A29065B507E29310896EA600B54B1C2E974A4B861B55&u=527429130&n=%E7%A5%9D%E7%A6%8F",
+        qqUrl: "",
         
         /* 在以下【双引号】中粘贴微信收款链接 */ 
         wechatUrl: "wxp://f2f0jH4CQ_UIEgNjberIhEEdkCtKbP_9nwIl",
