--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     */ 
     var setting = {
         /* 在以下【双引号】中粘贴QQ钱包收款链接 */ 
-        qqUrl: "",
+        qqUrl: "暂不支持 QQ 收款，请使用微信或支付宝，谢谢！",
         
         /* 在以下【双引号】中粘贴微信收款链接 */ 
         wechatUrl: "wxp://f2f0jH4CQ_UIEgNjberIhEEdkCtKbP_9nwIl",
