--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         aliUrl: "HTTPS://QR.ALIPAY.COM/FKX09789NJGWEGRFRHLMDC",
         
         // 用于动态生成二维码的API，一般不需要修改。
-        qrcodeApi: "https://www.kuaizhan.com/common/encode-png?large=true&data="    
+        qrcodeApi: "http://qr.liantu.com/api.php?text="    
         /*
         备用二维码api：
         http://s.jiathis.com/qrcode.php?url=
